--- a/index.html
+++ b/index.html
@@ -13,47 +13,50 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <div class="island">
+  <div class="island wrapper bg-white">
     <h1 class="pad-t normal">Want to go to Mars?</h1>
     <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
     <form class="push">
-      <fieldset class="push-1-4">
-        <legend class="normal italic push-1-2 giga">Personal details</legend>
-        <div class="push pad-t-1-4">
-          <label for="name">Name</label>
-          <input id="name" name="name">
+      <fieldset class="">
+        <legend class="normal italicgiga">Personal details</legend>
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <label for="name">Name</label>
+            <input id="name" name="name">
+          </div>
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <label for="age">Age</label>
+            <input id="age" name="age">
+          </div>
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="your@email.ca">
+          </div>
+          <div class="unit xs-1 s-1 m-1 l-1-2">
+            <label for="fitness">Physical fitness</label>
+            <select id="fitness" name="_fitness">
+              <option>Super-human</option>
+              <option>Fit as a fiddle</option>
+              <option>Not terribly strong</option>
+              <option>A little couch-potato-y</option>
+            </select>
+          </div>
         </div>
-        <div class="push">
-          <label for="age">Age</label>
-          <input id="age" name="age">
-        </div>
-        <div class="push">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="your@email.ca">
-        </div>
-        <div class="push">
-          <label id="fitness" for="fitness">Physical fitness</label>
-          <select id="fitness" name="_fitness">
-            <option>Super-human</option>
-            <option>Fit as a fiddle</option>
-            <option>Not terribly strong</option>
-            <option>A little couch-potato-y</option>
-          </select>
-        </div>
-        <div class="push-1-2">
+        <div class="">
           <label for="address">Address</label>
           <textarea id="address" name="address"></textarea>
         </div>
       </fieldset>
-      <fieldset>
-        <legend class="normal italic push-1-2 giga">Mission statement</legend>
-        <div class="pad-t-1-4">
+      <fieldset class="push-1-2 island-1-4">
+        <legend class="normal italicgiga">Mission statement</legend>
+        <div class="">
           <label for="statement">Why do you want to go to Mars?</label>
           <textarea id="statement" name="statement"></textarea>
         </div>
       </fieldset>
-
-      <button class="btn " type="submit">Register for the trip!</button>
+      <div class="text-center">
+        <button class="btn inline-block" type="submit">Register for the trip!</button>
+      </div>
     </form>
   </div>
 </body>
