--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <div class="island wrapper bg-white">
-    <h1 class="pad-t normal">Want to go to Mars?</h1>
-    <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
-    <form class="push">
-      <fieldset class="">
-        <legend class="normal italicgiga">Personal details</legend>
+  <div class="island-1-2 max-length bg-white">
+    <div class="island-1-2">
+      <h1 class="pad-t normal">Want to go to Mars?</h1>
+      <p class="mega push-0">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+    </div>
+    <form class="push" method="POST" action="https://formspree.io/robi0653@algonquinlive.com">
+      <fieldset class="push-0">
+        <legend class="normal italic giga gutter-1-2 pad-t-1-2 pad-b-1-4">Personal details</legend>
         <div class="grid">
-          <div class="unit xs-1 s-1 m-1 l-1-2">
+          <div class="unit xs-1 s-1 m-1 l-1-2 island-1-2">
             <label for="name">Name</label>
             <input id="name" name="name">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2">
+          <div class="unit xs-1 s-1 m-1 l-1-2 island-1-2">
             <label for="age">Age</label>
             <input id="age" name="age">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2">
+          <div class="unit xs-1 s-1 m-1 l-1-2 island-1-2">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="your@email.ca">
           </div>
-          <div class="unit xs-1 s-1 m-1 l-1-2">
+          <div class="unit xs-1 s-1 m-1 l-1-2 island-1-2">
             <label for="fitness">Physical fitness</label>
             <select id="fitness" name="_fitness">
               <option>Super-human</option>
@@ -42,20 +44,24 @@
             </select>
           </div>
         </div>
-        <div class="">
+        <div class="gutter-1-2 pad-t-1-2">
           <label for="address">Address</label>
           <textarea id="address" name="address"></textarea>
         </div>
       </fieldset>
-      <fieldset class="push-1-2 island-1-4">
-        <legend class="normal italicgiga">Mission statement</legend>
-        <div class="">
+      <fieldset class="">
+        <legend class="normal italic giga island-1-2">Mission statement</legend>
+        <div class="island-1-2">
           <label for="statement">Why do you want to go to Mars?</label>
           <textarea id="statement" name="statement"></textarea>
         </div>
       </fieldset>
       <div class="text-center">
         <button class="btn inline-block" type="submit">Register for the trip!</button>
+      </div>
+      <div class="hidden">
+        <label>Request to join the mission</label>
+        <input id="request" type="hidden" name="request">
       </div>
     </form>
   </div>
